# ai-dev-toolkit

./: .gitignore  CLAUDE.md  README.md  WARP.md
services/api/: DAY_1A_TASKS.md  main.py  models.py  pyproject.toml  schemas.py
services/api/core/: llm_service.py  prompts.py
services/api/tests/: conftest.py  test_api.py  test_llm.py  test_models.py  test_schemas.py
