[project]
name = "ai-dev-toolkit-api"
version = "0.1.0"
description = "AI-powered developer tools API"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-watcher>=0.4.0",
    "ruff>=0.1.0"
]
